overflow fix

--- a/frontend/src/map/Map.scss
+++ b/frontend/src/map/Map.scss
@@ -1,3 +1,5 @@
 .map-page {
   border: 1px solid pink;
+  max-height: 100%;
+  overflow: scroll;
 }
