--- a/frontend/src/recieved/Recieved.scss
+++ b/frontend/src/recieved/Recieved.scss
@@ -1,3 +1,5 @@
 .recieved-page {
   border: 1px solid pink;
+  max-height: 100%;
+  overflow: scroll;
 }
